--- a/src/components/JobFilter.css
+++ b/src/components/JobFilter.css
@@ -1,8 +1,9 @@
 .job-filters{
-    display: flex;
+    display: grid;
     flex-direction: row;
     gap: 20px;
     margin: 20px;
+    grid-template-columns: auto auto auto auto auto;
 }
 
 .job-container{
@@ -21,4 +22,29 @@
     flex-direction: row;
     gap: 20px;
     align-self: center;
+}
+
+@media screen and (max-width: 1400px) {
+    .job-filters {
+        grid-template-columns: auto auto auto auto;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .job-filters {
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .job-filters {
+        grid-template-columns: auto auto;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .job-filters {
+        grid-template-columns: auto;
+    }
 }
