--- a/src/pages/JobWrapper.css
+++ b/src/pages/JobWrapper.css
@@ -9,4 +9,32 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    align-content: center;
+}
+
+@media screen and (max-width: 1400px) {
+    .job-list {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .job-list {
+        grid-template-columns: auto auto;
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .job-list {
+        grid-template-columns: auto auto;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .job-list {
+        grid-template-columns: auto;
+    }
 }
